syntax = "proto3";

package leaf;

import "common/common.proto";

option go_package = "github.com/3s-rg-codes/HyperFaaS/proto/leaf";


message CreateFunctionRequest {
  common.Image image = 1;
  common.Config config = 2;
}

message CreateFunctionResponse {
  string function_id = 1;
}

service Leaf {
  // Schedules a function call on the worker identified by the provided function ID.
  rpc ScheduleCall(common.CallRequest) returns (common.CallResponse);
  //Creates a function on the LeafLeader (e.g. writes it to the cache, which is currently not purged)
  rpc CreateFunction(CreateFunctionRequest) returns (CreateFunctionResponse);
}
